old_tests/tests/lean/structure_with_index_error.lean.expected.out
structure_with_index_error.lean:1:14: error: invalid 'structure', 'Type' expected
