old_tests/tests/lean/structure_with_index_error.lean
structure foo : true → Type := (bar : true)
